--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -14,6 +14,9 @@ jobs:
 
     - name: Install dependencies
       run: pip3 install -U online-judge-verify-helper
+      
+    - name: oj login
+      run: oj login https://atcoder.jp/ -u ${{ secrets.ATCODER_USERNAME }} -p ${{ secrets.ATCODER_PASSWORD }} --use-browser never
 
     - name: Run tests
       env:
