--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -13,7 +13,7 @@ jobs:
       uses: actions/setup-python@v1
 
     - name: Install dependencies
-      run: pip3 install -U online-judge-verify-helper
+      run: pip install -U online-judge-verify-helper
       
     - name: oj login
       run: oj login https://atcoder.jp/ -u ${{ secrets.ATCODER_USERNAME }} -p ${{ secrets.ATCODER_PASSWORD }} --use-browser never
