--- a/.verify-helper/config.toml
+++ b/.verify-helper/config.toml
@@ -1,3 +1,4 @@
 [[languages.cpp.environments]]
 CXX = "g++"
-CXXFLAGS = ["-std=c++20", "-Wall", "-g", "-fsanitize=undefined", "-D_GLIBCXX_DEBUG", "-Wdeprecated-declarations"]
+
+CXXFLAGS = ["-std=c++20", "-Wall", "-g", "-D_GLIBCXX_DEBUG", "-Wdeprecated-declarations", "-Werror=deprecated-declarations"]
