--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -13,7 +13,10 @@ jobs:
       uses: actions/setup-python@v1
 
     - name: Install dependencies
-      run: pip install -U online-judge-verify-helper
+      run: pip install -U online-judge-verify-helper colorama
+
+    - name: Run local tests
+      run: make test-local
 
     - name: oj login
       run: oj login https://atcoder.jp/ -u ${{ secrets.ATCODER_USERNAME }} -p ${{ secrets.ATCODER_PASSWORD }} --use-browser never
@@ -25,6 +28,3 @@ jobs:
         GH_PAT: ${{ secrets.GH_PAT }}
         DROPBOX_TOKEN: ${{ secrets.DROPBOX_TOKEN }}
       run: make test-oj
-
-    - name: Run local tests
-      run: make test-local
