--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -23,7 +23,23 @@
     "compare": "cpp",
     "iostream": "cpp",
     "__locale": "cpp",
-    "cmath": "cpp"
+    "cmath": "cpp",
+    "complex": "cpp",
+    "variant": "cpp",
+    "chrono": "cpp",
+    "ranges": "cpp",
+    "locale": "cpp",
+    "ostream": "cpp",
+    "span": "cpp",
+    "bitset": "cpp",
+    "string_view": "cpp",
+    "stacktrace": "cpp",
+    "barrier": "cpp",
+    "latch": "cpp",
+    "limits": "cpp",
+    "semaphore": "cpp",
+    "valarray": "cpp",
+    "ios": "cpp"
   },
   "editor.formatOnSave": true,
   "formatFiles.excludedFolders": [
