--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -31,3 +31,11 @@ jobs:
 
     - name: Update docs
       run: make docs
+
+    - name: Commit and push
+      run: |
+        git config --global user.name 'github-actions[bot]'
+        git config --global user.email 'github-actions[bot]@users.noreply.github.com'
+        git add -A
+        git commit -m 'Update docs'
+        git push
